# StdPlus

./: CMakeLists.txt  README.md
CvPlus/src/: main.cpp
QtPlus/: README.md
StdPlus/: CMakeLists.txt  README.md
StdPlus/examples/: CMakeLists.txt
StdPlus/examples/msvc/: examples.sln  examples.vcxproj
StdPlus/examples/msvc/src/: main.cpp
StdPlus/include/OopSocket/: SocketAddressFactory.h
StdPlus/include/StdPlus/: CmdParserPlus.hpp  ContainerPlus.hpp  ConvertPlus.hpp  KeyboardControlPlus.hpp  MacrosPlus.hpp  MathPlus.hpp  Ones.h  OtherPlus.hpp  OutputSystemPlus.hpp  StdInclude.h  TestedPLus.hpp  TimePlus.hpp
StdPlus/include/StdPlus/_obsolete/: WindowsPlus.hpp
StdPlus/include/StdPlus/obsolete/: CmdParserPlus.hpp
StdPlus/info/: 2017-04-01 1743 derivated tested.xlsx  2017-04-01_1336_derivated.xlsx  2017-04-02 0007 Doxigen settings
StdPlus/src/OopSocket/: SocketAddress.cpp  SocketAddressFactory.cpp
StdPlus/src/StdPlus/: Ones.cpp
StdPlus/src/Test/: FileTest.hpp  MathTest.hpp  MyTransfer.hpp  SocketTest.hpp  TestMain.cpp  WindowsMBCSTest.hpp
include/: ContainerPlus.hpp  FilePlus.hpp  KeyboardControl.hpp  MacrosPlus.hpp  MathPlus.hpp  OtherPlus.hpp  StdPlus.h  StringPlus.hpp  TimePlus.hpp
include/LittleHelpers/: DebugHelper.hpp  LittleDebug.hpp
include/OopSocket/: BaseTcpTransfer.hpp  OopSocket.h  SocketAddress.h  TCPSocket.h  UDPSocket.h
include/StdPlus/: ConvertPlus.hpp  (+26 more)
info/: 2017-04-02 0007 Doxigen settings
msvc/: .gitignore  StdPlus.sln
msvc14/: .gitignore  StdPlus.sln  StdPlus.vcxproj  StdPlus.vcxproj.filters
src/: TestMain.cpp  main.cpp
(+30 files in other folders)
